--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -2,4 +2,7 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid brown;
+  height: 40px;
 }
