--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  align-items: flex-start;
-  width: 100%;
+
+  min-width: 320px;
   min-height: 100vh;
   background-color: beige;
 }
