--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
-:root {
-  /* width: 100%;
-  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+/* :root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
  
@@ -11,8 +10,8 @@
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */ */
-}
+  -moz-osx-font-smoothing: grayscale;
+} */
 
 a {
   font-weight: 500;
