--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,7 +1,7 @@
 .contact {
   display: flex;
   justify-content: space-between;
-  border: 1px solid brown;
+  border: 1px solid rgb(86, 0, 0);
   border-radius: 4px;
   padding: 8px;
   align-items: center;
@@ -10,17 +10,17 @@
 }
 .icon {
   padding-right: 6px;
-  color: brown;
+  color: rgb(86, 0, 0) n;
 }
 .btn {
   background-color: inherit;
-  color: brown;
-  border-color: brown;
+  color: rgb(86, 0, 0);
+  border-color: rgb(86, 0, 0);
 }
 .btn:hover {
-  background-color: brown;
+  background-color: rgb(86, 0, 0);
   color: white;
 }
 .name {
-  color: brown;
+  color: rgb(86, 0, 0);
 }
