--- a/src/components/ContactsForm/ContactsForm.module.css
+++ b/src/components/ContactsForm/ContactsForm.module.css
@@ -1,7 +1,7 @@
 .form {
   max-width: 260px;
   padding: 20px;
-  border: 1px solid brown;
+  border: 1px solid rgb(86, 0, 0);
   border-radius: 4px;
   margin-left: 40px;
 }
@@ -15,11 +15,11 @@
   margin-right: auto;
   margin-left: auto;
   background-color: inherit;
-  color: brown;
-  border-color: brown;
+  color: rgb(86, 0, 0);
+  border-color: rgb(86, 0, 0);
 }
 .btn:hover {
-  background-color: brown;
+  background-color: rgb(86, 0, 0);
   color: white;
 }
 .span {
@@ -27,7 +27,7 @@
 }
 .inputForm {
   background-color: inherit;
-  border: 1px solid brown;
+  border: 1px solid rgb(86, 0, 0);
 }
 .inputForm:hover {
   border-color: black;
@@ -39,5 +39,5 @@
 }
 
 .label {
-  color: brown;
+  color: rgb(86, 0, 0);
 }
