--- a/src/pages/ContactsPage.module.css
+++ b/src/pages/ContactsPage.module.css
@@ -1,4 +1,23 @@
 .title {
   margin-left: 40px;
-  color: brown;
+  color: rgb(86, 0, 0);
+  margin-top: 0;
+}
+.pero {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 40px;
+}
+.contactBox {
+  height: 100vh;
+  background-color: beige;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(245, 245, 220, 0.6),
+      rgba(245, 245, 220, 0.6)
+    ),
+    url('../assets/contact-page.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
