--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,12 +1,24 @@
+.title {
+  color: brown;
+}
 .homeBox {
   width: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  background-color: beige;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(245, 245, 220, 0.5),
+      rgba(245, 245, 220, 0.5)
+    ),
+    url('../assets/notebook.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .emoji {
   font-size: 4em;
-}
-.title {
-  color: brown;
 }
