--- a/src/pages/ContactsPage.module.css
+++ b/src/pages/ContactsPage.module.css
@@ -9,7 +9,7 @@
   margin-right: 40px;
 }
 .contactBox {
-  height: 100vh;
+  height: calc(100vh - 40px);
   background-color: beige;
   background-image: linear-gradient(
       to bottom,
