--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -3,7 +3,7 @@
 }
 .homeBox {
   width: 100%;
-  min-height: 100vh;
+  min-height: calc(100vh - 40px);
   display: flex;
   justify-content: center;
   align-items: center;
