--- a/src/pages/LoginPage.module.css
+++ b/src/pages/LoginPage.module.css
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: calc(100vh - 40px);
   background-color: beige;
   background-image: linear-gradient(
       to bottom,
